--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 
 # Build settings
-remote_theme: mmistakes/minimal-mistakes@latest
+remote_theme: mmistakes/minimal-mistakes@v4.24.1
 plugins:
   - jekyll-remote-theme
 
