--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 
 # Build settings
-remote_theme: mmistakes/minimal-mistakes@v4.27.0
+remote_theme: mmistakes/minimal-mistakes@4.27.0
 plugins:
   - jekyll-remote-theme
 
